--- a/tasks/rundeck.redhat.yml
+++ b/tasks/rundeck.redhat.yml
@@ -8,7 +8,7 @@
   - name: Install java 1.8 and rundeck
     yum:
       name: "{{ item }}"
-      state: latest
+      state: present
     with_items:
       - "{{ rundeck_packages }}"
     tags: rundeck
